--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+// From the below Title, you can pick any two and complete them with responsive design. 
+// For your reference visit this URL https://github.com/rvsp/HTML-CSS/tree/master/Tasks
+
+ //  1) event-home-page :
+Netlify link : https://heroic-puppy-9f1cfe.netlify.app/
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
